--- a/style.css
+++ b/style.css
@@ -84,21 +84,42 @@ body {
 .nav-list {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 1.2rem;
   margin: 0;
   padding: 0;
 }
 
-.nav-list a {
+.nav-item a {
   color: var(--text);
   text-decoration: none;
   font-family: "JetBrains Mono", monospace;
   font-weight: 500;
-  transition: color 0.18s;
+  transition: color var(--transition-speed);
 }
 
-.nav-list a:hover,
-.nav-list a.active {
+.nav-item {
+  position: relative;
+}
+
+.nav-item::after {
+  left: 0;
+  bottom: 0;
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 2px;
+  background-color: var(--accent);
+  transition: width var(--transition-speed);
+}
+
+.nav-item:hover::after,
+.nav-item.active::after {
+  width: 100%;
+}
+
+.nav-item:hover a,
+.nav-item.active a {
   color: var(--accent);
   text-shadow: 0 0 6px var(--glow);
 }
@@ -256,7 +277,6 @@ body {
   transform: translateY(-4px);
 }
 
-
 /* ==========================================================================
      Current Project Section
      ========================================================================== */
@@ -268,6 +288,7 @@ body {
   background: #07120f;
   border-radius: 8px;
   max-width: 780px;
+  transition: scale var(--transition-speed), box-shadow var(--transition-speed);
 }
 
 .tag {
@@ -337,6 +358,7 @@ body {
 
 .social {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.6rem;
   justify-content: center;
   margin-top: 0.6rem;
@@ -354,11 +376,25 @@ body {
   border: 1px solid var(--card-border);
   font-family: "JetBrains Mono", monospace;
   font-size: 0.95rem;
+  transition: color var(--transition-speed),
+    background-color var(--transition-speed);
 }
 
 .social-btn img {
   width: 18px;
   opacity: 0.9;
+  color: green;
+}
+
+.social-btn-icon {
+  width: 18px;
+  opacity: 0.9;
+  color: var(--accent);
+  transition: color var(--transition-speed);
+}
+
+.social-btn:hover > .social-btn-icon {
+  color: black;
 }
 
 .social-btn:hover {
@@ -505,6 +541,7 @@ body {
 
 .project-meta {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
@@ -513,6 +550,7 @@ body {
 
 .badges {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.45rem;
 }
 
@@ -642,5 +680,11 @@ body {
   .stats-row {
     flex-direction: column;
     align-items: center;
+  }
+}
+
+@media (max-width: 520px) {
+  .nav {
+    flex-direction: column;
   }
 }
